fix admin ui on smaller screens

--- a/styles/admin.css
+++ b/styles/admin.css
@@ -203,7 +203,7 @@
     }
 
     .admin-sidebar .link p {
-        @apply text-base font-medium max-md:hidden;
+        @apply text-base font-medium max-xl:hidden;
     }
 
     .admin-sidebar .user {
